[tool.poetry]
name = "tortoise-fastapi"
version = "0.0.1"
description = "The template for building scalable web APIs based on FastAPI, Tortoise ORM and others."
authors = ["Dominik Kozaczko <dominik@kozaczko.info>"]
license = "MIT"
packages = [
    { include = "app" },
]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
tortoise-orm = "^0.19.0"
pydantic = "^1.9"
asyncpg = "^0.25.0"
loguru = "^0.6.0"
trio = "^0.19.0"
hypercorn = {version = "^0.13.2", extras = ["trio"]}

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pre-commit = "^2.18.1"
pytest-cov = "^3.0.0"
isort = "^5.10.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"
